--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -9,11 +9,14 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
     - name: merge diygod/master to mine
       shell: bash
       run: |
         set -eux
-        git remote add -f diygod https://github.com/DIYgod/RSSHub.git
+        git remote add -f diygod "https://github.com/DIYgod/RSSHub.git"
         git checkout mine
         git merge --ff-only diygod/master
         git push
