fix: Failed to create or merge pull request: HttpError: Validation Failed

--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           token: ${{ secrets.MERGE_TOKEN }}
           owner: DIYgod
-          base: master
-          head: mine
+          base: mine
+          head: master
           auto_approve: true
