chore: update eslint: Empty mapping values are forbidden

--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -3,7 +3,7 @@ name: Sync Upstream to mine
 on:
   schedule:
     - cron: '0 4 * * *'
-  workflow_dispatch: # on button click
+  workflow_dispatch: ~ # on button click
 
 jobs:
   sync:
